Experimentation of testing implementation;

--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
   "AWS": {
-    "Region": ""
+    "Region": "local"
+  },
+  "DynamoDB": {
+    "LocalServiceUrl":"http://localhost:8000",
+    "LocalMode":true
+  },
+  "Cognito": {
+    "ClientId": "1jb2c3hps1kphkk9d0c93ehjqa"
   }
 }
