--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -6,7 +6,11 @@
     "LocalServiceUrl":"http://localhost:8000",
     "LocalMode":true
   },
+  "Auth": {
+    "Audience": "6sh53g3ldhb1m9v1c4fpsaaa0q",
+    "Authority": "https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_wgh8R1Tbn"
+  },
   "Cognito": {
-    "ClientId": "1jb2c3hps1kphkk9d0c93ehjqa"
+    "ClientId": "6sh53g3ldhb1m9v1c4fpsaaa0q"
   }
 }
