--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -6,5 +6,9 @@
   },
   "AWS": {
     "Region": "eu-north-1"
+  },
+  "Auth": {
+    "Audience": "7omub5as1em39dsad6r4v9coe8",
+    "Authority": "https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_wgh8R1Tbn"
   }
 }
