--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -15,9 +15,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.14" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Conditus.Trader.Domain" Version="1.0.1" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj" />
-    <ProjectReference Include="..\Conditus.Trader.Domain\Conditus.Trader.Domain.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 </Project>
