--- a/test/Acceptance/Acceptance.csproj
+++ b/test/Acceptance/Acceptance.csproj
@@ -21,9 +21,13 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Conditus.Trader.Domain" Version="1.0.1" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\API\API.csproj" />
-    <ProjectReference Include="..\..\src\Conditus.Trader.Domain\Conditus.Trader.Domain.csproj" />
     <ProjectReference Include="..\..\src\Business\Business.csproj" />
     <ProjectReference Include="..\..\src\DataAccess\DataAccess.csproj" />
   </ItemGroup>
