--- a/src/Business/Business.csproj
+++ b/src/Business/Business.csproj
@@ -7,13 +7,14 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.24" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.26" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Conditus.Trader.Domain" Version="1.0.2" />
+    <PackageReference Include="Conditus.Trader.Domain" Version="1.0.3" />
+    <PackageReference Include="Conditus.DynamoDBMapper" Version="1.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
