Portfolio service implemented and deployed;

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -12,5 +12,10 @@
   },
   "Cognito": {
     "ClientId": "6sh53g3ldhb1m9v1c4fpsaaa0q"
+  },
+  "Services": {
+    "PortfolioService": {
+      "URL": "http://localhost:6000/api/v1/portfolios"
+    }
   }
 }
