--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -10,5 +10,10 @@
   "Auth": {
     "Audience": "7omub5as1em39dsad6r4v9coe8",
     "Authority": "https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_wgh8R1Tbn"
+  },
+  "Services": {
+    "PortfolioService": {
+      "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/portfolios"
+    }
   }
 }
