Asset service implementation;

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -16,6 +16,9 @@
   "Services": {
     "PortfolioService": {
       "URL": "http://localhost:6000/api/v1/portfolios"
+    },
+    "AssetService": {
+      "URL": "http://localhost:6000/api/v1/assets"
     }
   }
 }
