--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -14,6 +14,9 @@
   "Services": {
     "PortfolioService": {
       "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/portfolios"
+    },
+    "AssetService": {
+      "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/assets"
     }
   }
 }
