Currency conversion added;

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -19,6 +19,9 @@
     },
     "AssetService": {
       "URL": "http://localhost:6000/api/v1/assets"
+    },
+    "CurrencyService": {
+      "URL": "http://localhost:6000/api/v1/currency"
     }
   }
 }
