--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -17,6 +17,9 @@
     },
     "AssetService": {
       "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/assets"
+    },
+    "CurrencyService": {
+      "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/currency"
     }
   }
 }
