--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -23,5 +23,10 @@
     "CurrencyService": {
       "URL": "http://localhost:6000/api/v1/currency"
     }
+  },
+  "CORS": {
+    "AllowedOrigins": [
+      "http://localhost:4200"
+    ]
   }
 }
