--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -22,5 +22,11 @@
     "CurrencyService": {
       "URL": "https://vdssiuu1d3.execute-api.eu-north-1.amazonaws.com/Production/api/v1/currency"
     }
+  },
+  "CORS": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "http://conditus-trader-angular.s3-website.eu-north-1.amazonaws.com"
+    ]
   }
 }
